Fix the image dimension in the hero
If the image was too big the landing page will break

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,12 @@ body {
 
 }
 
+.image-title img {
+    height: 250px;
+    width: 550px;
+    border-radius: 12px;
+}
+
 /* images */
 
 .information {
